--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Monday 27/11/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">11 - 4 - 6 - 89 - 32</p>
-                <p class="machine">72 - 5 - 14 - 38 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Peoples</h3>
-                <p class="winning">55 - 12 - 59 - 15 - 4</p>
-                <p class="machine">75 - 67 - 10 - 16 - 8</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">81 - 24 - 86 - 82 - 46</p>
-                <p class="machine">32 - 65 - 33 - 63 - 40</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">68 - 77 - 83 - 19 - 38</p>
-                <p class="machine">87 - 44 - 34 - 23 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">21 - 5 - 89 - 61 - 34</p>
-                <p class="machine">19 - 76 - 26 - 74 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">35 - 41 - 25 - 43 - 22</p>
-                <p class="machine">13 - 88 - 76 - 5 - 87</p>        
-            </article>
-        </section>
-        <section>
             <h2 class="date">Tuesday 28/11/2023</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">48 - 26 - 75 - 59 - 11</p>
                 <p class="machine">50 - 18 - 12 - 83 - 22</p>        
+            </article>
+        </section>
+        <section>
+            <h2 class="date">Wednesday 29/11/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">53 - 88 - 71 - 11 - 48</p>
+                <p class="machine">10 - 56 - 78 - 43 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Mark II</h3>
+                <p class="winning">5 - 40 - 58 - 14 - 16</p>
+                <p class="machine">78 - 4 - 2 - 86 - 18</p>        
+            </article>
+            <article>
+                <h3 class="game">Vag</h3>
+                <p class="winning">5 - 85 - 63 - 76 - 17</p>
+                <p class="machine">40 - 68 - 36 - 25 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">34 - 46 - 24 - 49 - 58</p>
+                <p class="machine">43 - 44 - 73 - 63 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">MIDWEEK</h3>
+                <p class="winning">70 - 78 - 58 - 35 - 73</p>
+                <p class="machine">59 - 29 - 86 - 64 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">17 - 18 - 1 - 72 - 63</p>
+                <p class="machine">6 - 13 - 37 - 3 - 31</p>        
             </article>
         </section>
     </main>
