--- a/GAMES/10Inter.html
+++ b/GAMES/10Inter.html
@@ -409,6 +409,28 @@
             <tbody>
                 <tr>
                     <td class="serial-num">18</td>
+                    <td class="days"><small>thurs 30th Nov</small></td>
+            
+                    <!-- winning-->
+                    <td class="winning">27</td>
+                    <td class="winning">40</td>
+                    <td class="winning">38</td>
+                    <td class="winning">20</td>
+                    <td class="winning" id="lbw">81</td>
+
+                    <!-- machine-->
+                    <td class="machine" id="fbm">3</td>
+                    <td class="machine">36</td>
+                    <td class="machine">33</td>
+                    <td class="machine">62</td>
+                    <td class="machine" id="lbm">1</td>
+                </tr>
+            </tbody>
+
+                                    <!-- day19-->
+            <tbody>
+                <tr>
+                    <td class="serial-num">19</td>
                     <td class="days"><small></small></td>
             
                     <!-- winning-->
