--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,39 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Tuesday 28/11/2023</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">47 - 90 - 38 - 31 - 70</p>
-                <p class="machine">61 - 43 - 57 - 79 - 19</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">32 - 87 - 31 - 72 - 24</p>
-                <p class="machine">70 - 65 - 16 - 56 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">49 - 60 - 10 - 72 - 48</p>
-                <p class="machine">32 - 27 - 39 - 23 - 13</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">42 - 27 - 73 - 5 - 84</p>
-                <p class="machine">14 - 25 - 2 - 89 - 34</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY G</h3>
-                <p class="winning">54 - 84 - 70 - 31 - 39</p>
-                <p class="machine">62 - 21 - 56 - 60 - 25</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">48 - 26 - 75 - 59 - 11</p>
-                <p class="machine">50 - 18 - 12 - 83 - 22</p>        
-            </article>
-        </section>
-        <section>
             <h2 class="date">Wednesday 29/11/2023</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -142,6 +109,39 @@
                 <h3 class="game">Lucky</h3>
                 <p class="winning">17 - 18 - 1 - 72 - 63</p>
                 <p class="machine">6 - 13 - 37 - 3 - 31</p>        
+            </article>
+        </section>
+        <section>
+            <h2 class="date">thursday 30/11/2023</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">1 - 12 - 75 - 19 - 9</p>
+                <p class="machine">36 - 44 - 52 - 37 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">68 - 5 - 37 - 81 - 10</p>
+                <p class="machine">66 - 19 - 53 - 2 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">39 - 66 - 33 - 89 - 40</p>
+                <p class="machine">84 - 36 - 46 - 80 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">27 - 40 - 38 - 20 - 81</p>
+                <p class="machine">3 - 36 - 33 - 62 - 1</p>        
+            </article>
+            <article>
+                <h3 class="game">FORTUNE</h3>
+                <p class="winning">3 - 73 - 82 - 63 - 56</p>
+                <p class="machine">27 - 10 - 37 - 79 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">20 - 72 - 30 - 10 - 12</p>
+                <p class="machine">76 - 53 - 60 - 23 - 31</p>        
             </article>
         </section>
     </main>
