--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,71 +79,76 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Wednesday 29/11/2023</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">53 - 88 - 71 - 11 - 48</p>
-                <p class="machine">10 - 56 - 78 - 43 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p class="winning">5 - 40 - 58 - 14 - 16</p>
-                <p class="machine">78 - 4 - 2 - 86 - 18</p>        
-            </article>
-            <article>
-                <h3 class="game">Vag</h3>
-                <p class="winning">5 - 85 - 63 - 76 - 17</p>
-                <p class="machine">40 - 68 - 36 - 25 - 3</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">34 - 46 - 24 - 49 - 58</p>
-                <p class="machine">43 - 44 - 73 - 63 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">MIDWEEK</h3>
-                <p class="winning">70 - 78 - 58 - 35 - 73</p>
-                <p class="machine">59 - 29 - 86 - 64 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">17 - 18 - 1 - 72 - 63</p>
-                <p class="machine">6 - 13 - 37 - 3 - 31</p>        
-            </article>
-        </section>
-        <section>
-            <h2 class="date">thursday 30/11/2023</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">1 - 12 - 75 - 19 - 9</p>
-                <p class="machine">36 - 44 - 52 - 37 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">68 - 5 - 37 - 81 - 10</p>
-                <p class="machine">66 - 19 - 53 - 2 - 43</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">39 - 66 - 33 - 89 - 40</p>
-                <p class="machine">84 - 36 - 46 - 80 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">27 - 40 - 38 - 20 - 81</p>
-                <p class="machine">3 - 36 - 33 - 62 - 1</p>        
-            </article>
-            <article>
-                <h3 class="game">FORTUNE</h3>
-                <p class="winning">3 - 73 - 82 - 63 - 56</p>
-                <p class="machine">27 - 10 - 37 - 79 - 72</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">20 - 72 - 30 - 10 - 12</p>
-                <p class="machine">76 - 53 - 60 - 23 - 31</p>        
-            </article>
-        </section>
+        <h2 class="date">friday 1/12/2023</h2>
+        <article>
+            <h3 class="game">Royal</h3>
+            <p class="winning">15 - 33 - 44 - 3 - 74</p>
+            <p class="machine">23 - 80 - 32 - 62 - 38</p>        
+        </article>
+        <article>
+            <h3 class="game">Metro</h3>
+            <p class="winning">6 - 82 - 25 - 52 - 23</p>
+            <p class="machine">63 - 79 - 14 - 78 - 74</p>        
+        </article>
+        <article>
+            <h3 class="game">Gold</h3>
+            <p class="winning">23 - 40 - 79 - 16 - 44</p>
+            <p class="machine">62 - 29 - 48 - 33 - 88</p>        
+        </article>
+        <article>
+            <h3 class="game">Jackpot</h3>
+            <p class="winning">87 - 78 - 86 - 43 - 84</p>
+            <p class="machine">4 - 46 - 15 - 28 - 90</p>        
+        </article>
+        <article>
+            <h3 class="game">Vag</h3>
+            <p class="winning">47 - 5 - 31 - 67 - 38</p>
+            <p class="machine">88 - 37 - 45 - 57 - 82</p>        
+        </article>
+        <article>
+            <h3 class="game"></h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
+    <section>
+        <h2 class="date">sat 2/12/2023</h2>
+        <article>
+            <h3 class="game">Premier King</h3>
+            <p class="winning">44 - 55 - 58 - 20 - 12</p>
+            <p class="machine">86 - 78 - 6 - 67 - 23</p>        
+        </article>
+        <article>
+            <h3 class="game">Super</h3>
+            <p class="winning">59 - 75 - 22 - 52 - 33</p>
+            <p class="machine">3 - 17 - 18 - 38 - 72</p>        
+        </article>
+        <article>
+            <h3 class="game">Club Master</h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game">06</h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game">Bonanza</h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game">National</h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+        <article>
+            <h3 class="game">Fair Chance</h3>
+            <p class="winning"></p>
+            <p class="machine"></p>        
+        </article>
+    </section>
     </main>
     
 
