--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -125,28 +125,28 @@
         </article>
         <article>
             <h3 class="game">Club Master</h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <p class="winning">89 - 57 - 73 - 82 - 75</p>
+            <p class="machine">14 - 1 - 41 - 4 - 90</p>        
         </article>
         <article>
             <h3 class="game">06</h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <p class="winning">11 - 14 - 84 - 58 - 90</p>
+            <p class="machine">29 - 43 - 20 - 9 - 39</p>        
         </article>
         <article>
             <h3 class="game">Bonanza</h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <p class="winning">72 - 19 - 77 - 1 - 68</p>
+            <p class="machine">38 - 48 - 50 - 66 - 78</p>        
         </article>
         <article>
             <h3 class="game">National</h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <p class="winning">19 - 18 - 63 - 79 - 77</p>
+            <p class="machine">89 - 31 - 56 - 25 - 16</p>        
         </article>
         <article>
             <h3 class="game">Fair Chance</h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
+            <p class="winning">40 - 14 - 22 - 60 - 12</p>
+            <p class="machine">13 - 75 - 18 - 84 - 56</p>        
         </article>
     </section>
     </main>
