--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -78,39 +78,6 @@
         </nav>
     </header>
     <main>
-        <section>
-        <h2 class="date">friday 1/12/2023</h2>
-        <article>
-            <h3 class="game">Royal</h3>
-            <p class="winning">15 - 33 - 44 - 3 - 74</p>
-            <p class="machine">23 - 80 - 32 - 62 - 38</p>        
-        </article>
-        <article>
-            <h3 class="game">Metro</h3>
-            <p class="winning">6 - 82 - 25 - 52 - 23</p>
-            <p class="machine">63 - 79 - 14 - 78 - 74</p>        
-        </article>
-        <article>
-            <h3 class="game">Gold</h3>
-            <p class="winning">23 - 40 - 79 - 16 - 44</p>
-            <p class="machine">62 - 29 - 48 - 33 - 88</p>        
-        </article>
-        <article>
-            <h3 class="game">Jackpot</h3>
-            <p class="winning">87 - 78 - 86 - 43 - 84</p>
-            <p class="machine">4 - 46 - 15 - 28 - 90</p>        
-        </article>
-        <article>
-            <h3 class="game">Vag</h3>
-            <p class="winning">47 - 5 - 31 - 67 - 38</p>
-            <p class="machine">88 - 37 - 45 - 57 - 82</p>        
-        </article>
-        <article>
-            <h3 class="game"></h3>
-            <p class="winning"></p>
-            <p class="machine"></p>        
-        </article>
-    </section>
     <section>
         <h2 class="date">sat 2/12/2023</h2>
         <article>
@@ -147,6 +114,41 @@
             <h3 class="game">Fair Chance</h3>
             <p class="winning">40 - 14 - 22 - 60 - 12</p>
             <p class="machine">13 - 75 - 18 - 84 - 56</p>        
+        </article>
+    </section>
+
+
+    <section>
+        <h2 class="date">sun 3/12/2023</h2>
+        <article>
+            <h3 class="game">Royal</h3>
+            <p class="winning">19 - 71 - 74 - 13 - 78</p>
+            <p class="machine">14 - 8 - 30 - 64 - 42</p>        
+        </article>
+        <article>
+            <h3 class="game">mark ii</h3>
+            <p class="winning">87 - 20 - 69 - 60 - 76</p>
+            <p class="machine">52 - 73 - 85 - 22 - 53</p>        
+        </article>
+        <article>
+            <h3 class="game">Enugu</h3>
+            <p class="winning">63 - 24 - 8 - 61 - 71</p>
+            <p class="machine">70 - 79 - 51 - 66 - 37</p>        
+        </article>
+        <article>
+            <h3 class="game">Aseda</h3>
+            <p class="winning">26 - 67 - 87 - 83 - 86</p>
+            <p class="machine">89 - 15 - 8 - 77 - 11</p>        
+        </article>
+        <article>
+            <h3 class="game">Lucky</h3>
+            <p class="winning">60 - 65 - 78 - 19 - 1</p>
+            <p class="machine">66 - 82 - 53 - 81 - 12</p>        
+        </article>
+        <article>
+            <h3 class="game">Tota</h3>
+            <p class="winning">42 - 61 - 50 - 16 - 87</p>
+            <p class="machine">67 - 66 - 5 - 76 - 88</p>        
         </article>
     </section>
     </main>
