--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,46 +79,6 @@
     </header>
     <main>
     <section>
-        <h2 class="date">sat 2/12/2023</h2>
-        <article>
-            <h3 class="game">Premier King</h3>
-            <p class="winning">44 - 55 - 58 - 20 - 12</p>
-            <p class="machine">86 - 78 - 6 - 67 - 23</p>        
-        </article>
-        <article>
-            <h3 class="game">Super</h3>
-            <p class="winning">59 - 75 - 22 - 52 - 33</p>
-            <p class="machine">3 - 17 - 18 - 38 - 72</p>        
-        </article>
-        <article>
-            <h3 class="game">Club Master</h3>
-            <p class="winning">89 - 57 - 73 - 82 - 75</p>
-            <p class="machine">14 - 1 - 41 - 4 - 90</p>        
-        </article>
-        <article>
-            <h3 class="game">06</h3>
-            <p class="winning">11 - 14 - 84 - 58 - 90</p>
-            <p class="machine">29 - 43 - 20 - 9 - 39</p>        
-        </article>
-        <article>
-            <h3 class="game">Bonanza</h3>
-            <p class="winning">72 - 19 - 77 - 1 - 68</p>
-            <p class="machine">38 - 48 - 50 - 66 - 78</p>        
-        </article>
-        <article>
-            <h3 class="game">National</h3>
-            <p class="winning">19 - 18 - 63 - 79 - 77</p>
-            <p class="machine">89 - 31 - 56 - 25 - 16</p>        
-        </article>
-        <article>
-            <h3 class="game">Fair Chance</h3>
-            <p class="winning">40 - 14 - 22 - 60 - 12</p>
-            <p class="machine">13 - 75 - 18 - 84 - 56</p>        
-        </article>
-    </section>
-
-
-    <section>
         <h2 class="date">sun 3/12/2023</h2>
         <article>
             <h3 class="game">Royal</h3>
@@ -149,6 +109,41 @@
             <h3 class="game">Tota</h3>
             <p class="winning">42 - 61 - 50 - 16 - 87</p>
             <p class="machine">67 - 66 - 5 - 76 - 88</p>        
+        </article>
+    </section>
+
+
+    <section>
+        <h2 class="date">Monday 4/12/2023</h2>
+        <article>
+            <h3 class="game">Diamond</h3>
+            <p class="winning"> 9 -   8 - 38 - 52 - 43</p>
+            <p class="machine">58 -  3 - 74 - 70 - 31</p>        
+        </article>
+        <article>
+            <h3 class="game">Peoples</h3>
+            <p class="winning">24 - 62 - 68 - 14 - 53</p>
+            <p class="machine">79 - 34 -  7 - 33 - 83</p>        
+        </article>
+        <article>
+            <h3 class="game">Bingo</h3>
+            <p class="winning"> 7 - 66 - 37 - 79 - 52</p>
+            <p class="machine">24 - 55 - 42 - 49 - 47</p>        
+        </article>
+        <article>
+            <h3 class="game">Metro</h3>
+            <p class="winning">37 - 30 - 48 - 13 - 31</p>
+            <p class="machine">26 - 86 - 55 - 53 - 42</p>        
+        </article>
+        <article>
+            <h3 class="game">MSP</h3>
+            <p class="winning"> 3 - 28 - 15 - 36 - 18</p>
+            <p class="machine">21 - 52 - 38 - 68 - 85</p>        
+        </article>
+        <article>
+            <h3 class="game">International</h3>
+            <p class="winning">28 - 11 - 25 - 35 - 86</p>
+            <p class="machine">82 - 70 - 69 - 81 - 65</p>        
         </article>
     </section>
     </main>
