--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -78,74 +78,73 @@
         </nav>
     </header>
     <main>
-    <section>
-        <h2 class="date">sun 3/12/2023</h2>
-        <article>
-            <h3 class="game">Royal</h3>
-            <p class="winning">19 - 71 - 74 - 13 - 78</p>
-            <p class="machine">14 - 8 - 30 - 64 - 42</p>        
-        </article>
-        <article>
-            <h3 class="game">mark ii</h3>
-            <p class="winning">87 - 20 - 69 - 60 - 76</p>
-            <p class="machine">52 - 73 - 85 - 22 - 53</p>        
-        </article>
-        <article>
-            <h3 class="game">Enugu</h3>
-            <p class="winning">63 - 24 - 8 - 61 - 71</p>
-            <p class="machine">70 - 79 - 51 - 66 - 37</p>        
-        </article>
-        <article>
-            <h3 class="game">Aseda</h3>
-            <p class="winning">26 - 67 - 87 - 83 - 86</p>
-            <p class="machine">89 - 15 - 8 - 77 - 11</p>        
-        </article>
-        <article>
-            <h3 class="game">Lucky</h3>
-            <p class="winning">60 - 65 - 78 - 19 - 1</p>
-            <p class="machine">66 - 82 - 53 - 81 - 12</p>        
-        </article>
-        <article>
-            <h3 class="game">Tota</h3>
-            <p class="winning">42 - 61 - 50 - 16 - 87</p>
-            <p class="machine">67 - 66 - 5 - 76 - 88</p>        
-        </article>
-    </section>
+        <section>
+            <h2 class="date">Monday 4/12/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning"> 9 -   8 - 38 - 52 - 43</p>
+                <p class="machine">58 -  3 - 74 - 70 - 31</p>        
+            </article>
+            <article>
+                <h3 class="game">Peoples</h3>
+                <p class="winning">24 - 62 - 68 - 14 - 53</p>
+                <p class="machine">79 - 34 -  7 - 33 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning"> 7 - 66 - 37 - 79 - 52</p>
+                <p class="machine">24 - 55 - 42 - 49 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">37 - 30 - 48 - 13 - 31</p>
+                <p class="machine">26 - 86 - 55 - 53 - 42</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning"> 3 - 28 - 15 - 36 - 18</p>
+                <p class="machine">21 - 52 - 38 - 68 - 85</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">28 - 11 - 25 - 35 - 86</p>
+                <p class="machine">82 - 70 - 69 - 81 - 65</p>        
+            </article>
+        </section>
 
-
-    <section>
-        <h2 class="date">Monday 4/12/2023</h2>
-        <article>
-            <h3 class="game">Diamond</h3>
-            <p class="winning"> 9 -   8 - 38 - 52 - 43</p>
-            <p class="machine">58 -  3 - 74 - 70 - 31</p>        
-        </article>
-        <article>
-            <h3 class="game">Peoples</h3>
-            <p class="winning">24 - 62 - 68 - 14 - 53</p>
-            <p class="machine">79 - 34 -  7 - 33 - 83</p>        
-        </article>
-        <article>
-            <h3 class="game">Bingo</h3>
-            <p class="winning"> 7 - 66 - 37 - 79 - 52</p>
-            <p class="machine">24 - 55 - 42 - 49 - 47</p>        
-        </article>
-        <article>
-            <h3 class="game">Metro</h3>
-            <p class="winning">37 - 30 - 48 - 13 - 31</p>
-            <p class="machine">26 - 86 - 55 - 53 - 42</p>        
-        </article>
-        <article>
-            <h3 class="game">MSP</h3>
-            <p class="winning"> 3 - 28 - 15 - 36 - 18</p>
-            <p class="machine">21 - 52 - 38 - 68 - 85</p>        
-        </article>
-        <article>
-            <h3 class="game">International</h3>
-            <p class="winning">28 - 11 - 25 - 35 - 86</p>
-            <p class="machine">82 - 70 - 69 - 81 - 65</p>        
-        </article>
-    </section>
+        <section>
+            <h2 class="date">tuesday 5/12/2023</h2>
+            <article>
+                <h3 class="game">gold</h3>
+                <p class="winning">42 - 17 - 76 - 39 - 85</p>
+                <p class="machine">57 - 73 - 40 - 44 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">O6</h3>
+                <p class="winning">28 - 81 - 70 -  3 - 12</p>
+                <p class="machine">69 - 57 - 77 - 56 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">45 - 12 - 10 - 18 - 69</p>
+                <p class="machine">35 - 23 - 50 - 61 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">11 - 86 - 83 - 63 - 13</p>
+                <p class="machine">40 - 53 - 15 - 25 - 35</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">60 - 77 - 87 - 65 - 36</p>
+                <p class="machine">18 - 79 - 80 - 83 - 63</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">52 - 13 - 47 - 29 -  1</p>
+                <p class="machine">85 - 70 - 77 - 18 - 39</p>        
+            </article>
+        </section>
     </main>
     
 
