--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 </div>
             </section>
             <aside class="classification-wrapper" id="dragClassification" draggable="true" >
+                <!-- <a href="classification.html" class="counterpart">Click to View in Main Page</a>  -->
                 <iframe src="classification.html" class="classification"  id="dis"></iframe>
             </aside> 
             <aside  class="disclaimer">
