--- a/index.html
+++ b/index.html
@@ -48,8 +48,15 @@
                     <li><a href="./GAMES/23Bonanza.html">Bonanza</a></li>
                     <li><a href="./GAMES/24King.html"> Premier King</a></li>
                     <li><a href="./GAMES/25National.html">National</a></li>
-                    <li><a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a></li>
+                    <li><a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
                 </ul>
+
+                <!-- <div class="nav">
+                    <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
+                    <button class="buy-lrCard">Buy LR Card</button>
+                    <a href="" >Game List & Date </a>
+                </div> -->
+                
             </nav>
         </header>
         <main>
