--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -79,40 +79,6 @@
     </header>
     <main>
         <section>
-            <h2 class="date">Monday 4/12/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning"> 9 -   8 - 38 - 52 - 43</p>
-                <p class="machine">58 -  3 - 74 - 70 - 31</p>        
-            </article>
-            <article>
-                <h3 class="game">Peoples</h3>
-                <p class="winning">24 - 62 - 68 - 14 - 53</p>
-                <p class="machine">79 - 34 -  7 - 33 - 83</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning"> 7 - 66 - 37 - 79 - 52</p>
-                <p class="machine">24 - 55 - 42 - 49 - 47</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">37 - 30 - 48 - 13 - 31</p>
-                <p class="machine">26 - 86 - 55 - 53 - 42</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning"> 3 - 28 - 15 - 36 - 18</p>
-                <p class="machine">21 - 52 - 38 - 68 - 85</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">28 - 11 - 25 - 35 - 86</p>
-                <p class="machine">82 - 70 - 69 - 81 - 65</p>        
-            </article>
-        </section>
-
-        <section>
             <h2 class="date">tuesday 5/12/2023</h2>
             <article>
                 <h3 class="game">gold</h3>
@@ -143,6 +109,40 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">52 - 13 - 47 - 29 -  1</p>
                 <p class="machine">85 - 70 - 77 - 18 - 39</p>        
+            </article>
+        </section>
+
+        <section>
+            <h2 class="date">wednesday 6/11/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">76 - 67 - 35 - 70 - 59</p>
+                <p class="machine">55 -  9 - 11 - 29 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">mark II</h3>
+                <p class="winning">20 - 16 -  5 - 42 - 89</p>
+                <p class="machine">61 - 84 - 29 - 76 - 72</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">86 - 64 - 26 - 29 - 20</p>
+                <p class="machine">48 - 34 -  3 - 14 - 75</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">83 - 87 - 80 - 33 - 67</p>
+                <p class="machine">13 - 15 - 50 - 66 - 47</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">71 - 88 - 63 - 10 - 33</p>
+                <p class="machine">15 -  7 - 68 -  3 - 79</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">77 - 19 - 43 - 74 - 73</p>
+                <p class="machine">54 - 83 - 55 - 65 -  9</p>        
             </article>
         </section>
     </main>
