--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
                     <li><a href="./GAMES/23Bonanza.html">Bonanza</a></li>
                     <li><a href="./GAMES/24King.html"> Premier King</a></li>
                     <li><a href="./GAMES/25National.html">National</a></li>
-                    <li><a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
+                    <!-- <li><a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a> -->
                 </ul>
 
-                <!-- <div class="nav">
+                <div class="navigation">
                     <a href="./GAMES/dailyResult.html"  id="dailyResult">Check Day Result</a>
-                    <button class="buy-lrCard">Buy LR Card</button>
-                    <a href="" >Game List & Date </a>
-                </div> -->
+                    <!-- <button class="buy-lrCard">Buy LR Card</button> -->
+                </div> 
                 
             </nav>
         </header>
@@ -167,16 +166,18 @@
             </aside>
         </main>
         <footer>
-            <address>
-                <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>  
+            <small>Created & Manage By Hologuti Business Centre</small>
+            <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
+            <div>
                 <span>Social Media</span>
                 <div>
-                    <a href="https://twitter.com/hologutiBcentre" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-                    <a href="https://www.facebook.com/hologutiBusines" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"></i></a>
-                    <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://twitter.com/hologutiBcentre" target="_blank" aria-label="Visit our X Page "><i class="fa-brands fa-square-x-twitter"></i></a>
+                    <a href="https://www.facebook.com/hologutiBusines" target="_blank" aria-level="Visit our facebook Page"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://m.me/109930914660224" target="_blank" aria-label="Visit our Messenger handle to Chat Us"><i class="fa-brands fa-facebook-messenger"></i></a>
+                    <a href="https://www.instagram.com/hologutibusines/" target="_blank" aria-label="Visit Our instagram Page"><i class="fa-brands fa-instagram"></i></a>
                 </div>
-            </address>
+            </div>
+            <a href="#">Team</a>
         </footer> 
         <script src="script.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
