--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section>
-            <h2 class="date">Thursday</h2>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">54 - 29 - 81 - 44 - 90</p>
-                <p class="machine">63 - 85 - 82 - 79 - 10</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">57 - 88 - 48 - 62 - 27</p>
-                <p class="machine">51 - 61 - 23 - 80 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">71 - 51 - 13 -  6 - 82</p>
-                <p class="machine">20 - 72 - 12 -  9 -  3</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">54 - 14 - 42 - 49 - 34</p>
-                <p class="machine">33 - 81 - 44 - 36 - 35</p>        
-            </article>
-            <article>
-                <h3 class="game">Fortune</h3>
-                <p class="winning">36 - 88 - 60 - 71 - 35</p>
-                <p class="machine">38 - 44 - 63 - 12 - 80</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">48 - 28 - 16 - 68 - 54</p>
-                <p class="machine">26 - 17 - 36 - 34 - 80</p>        
-            </article>
-        </section>
-
-        <section>
             <h2 class="date">Friday 8/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -236,6 +202,41 @@
                 <h3 class="game">Vag</h3>
                 <p class="winning"> 9 - 20 - 33 - 70 - 19</p>
                 <p class="machine">44 - 18 - 8 - 42 - 31</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="yesterday result">
+            <h2 class="date">saturday 9/12/2023</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">63 - 46 - 82 - 31 - 28</p>
+                <p class="machine">81 -  9 - 74 - 38 - 29</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">88 -  2 - 32 - 37 - 85</p>
+                <p class="machine">14 - 47 - 64 - 72 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">79 - 32 - 61 - 83 - 81</p>
+                <p class="machine">40 - 69 -  4 - 14 - 60</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">79 - 10 - 23 -  4 - 90</p>
+                <p class="machine">80 - 55 - 66 - 67 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">14 -  9 - 77 - 70 - 24</p>
+                <p class="machine">61 - 36 - 34 - 84 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">51 - 40 - 31 - 59 -  5</p>
+                <p class="machine">10 - 73 - 86 - 38 - 44</p>        
             </article>
         </section>
     </div>
