--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">saturday 9/12/2023</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">63 - 46 - 82 - 31 - 28</p>
-                <p class="machine">81 -  9 - 74 - 38 - 29</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">88 -  2 - 32 - 37 - 85</p>
-                <p class="machine">14 - 47 - 64 - 72 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">79 - 32 - 61 - 83 - 81</p>
-                <p class="machine">40 - 69 -  4 - 14 - 60</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">79 - 10 - 23 -  4 - 90</p>
-                <p class="machine">80 - 55 - 66 - 67 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">14 -  9 - 77 - 70 - 24</p>
-                <p class="machine">61 - 36 - 34 - 84 - 39</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">51 - 40 - 31 - 59 -  5</p>
-                <p class="machine">10 - 73 - 86 - 38 - 44</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">sunday 10/12/2023</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">Tota</h3>
                 <p class="winning">52 - 29 - 89 - 62 - 88</p>
                 <p class="machine">68 - 78 - 15 - 81 - 36</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">monday 11/12/2023</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">18 - 27 - 34 - 14 - 78</p>
+                <p class="machine">41 - 77 - 25 - 54 - 69</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">23 - 51 - 46 - 70 - 58</p>
+                <p class="machine">87 - 18 - 66 - 15 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning"> 3 - 40 - 33 - 13 - 81</p>
+                <p class="machine">23 - 42 - 15 - 25 - 17</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">26 - 65 - 57 -  6 - 36</p>
+                <p class="machine">86 - 50 - 38 - 68 - 73</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">23 - 76 - 10 - 77 - 86</p>
+                <p class="machine">27 - 20 -  4 - 68 -  7</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">50 - 35 - 49 - 38 - 27</p>
+                <p class="machine">60 - 37 - 86 - 20 - 19</p>        
             </article>
         </section>
     </div>
