--- a/index.html
+++ b/index.html
@@ -168,16 +168,22 @@
         <footer>
             <small>Created & Manage By Hologuti Business Centre</small>
             <!-- <span>&copy;2023 Hologuti Business Centre - All Rights Reserved</span>   -->
-            <div>
-                <span>Social Media</span>
-                <div>
+            <div class="contentInfo-wrapper">
+                <a href="#" class="team">Team</a>
+
+                <div class="getInTouch">
+                    <span>Get in Touch</span>
+                    <a href="tel:+2349058206578">09058206578</a>
+                    <a href="mailto:vlb.hologutibusinesscentre.com">vlb.hologutibusinesscentre.com</a>
+                </div>
+                <div class="stayConnected">
+                    <span>Stay connected</span>
                     <a href="https://twitter.com/hologutiBcentre" target="_blank" aria-label="Visit our X Page "><i class="fa-brands fa-square-x-twitter"></i></a>
                     <a href="https://www.facebook.com/hologutiBusines" target="_blank" aria-level="Visit our facebook Page"><i class="fa-brands fa-facebook"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank" aria-label="Visit our Messenger handle to Chat Us"><i class="fa-brands fa-facebook-messenger"></i></a>
                     <a href="https://www.instagram.com/hologutibusines/" target="_blank" aria-label="Visit Our instagram Page"><i class="fa-brands fa-instagram"></i></a>
                 </div>
             </div>
-            <a href="#">Team</a>
         </footer> 
         <script src="script.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
