Coreected Super date

--- a/GAMES/15Super.html
+++ b/GAMES/15Super.html
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                     <td class="serial-num">1</td>
-                    <td class="days"><small>tuesday 10<sup>th</sup></small></td>
+                    <td class="days"><small>tuesday 3<sup>rd</sup></small></td>
                    
                     <!-- winning-->
                     <td class="winning">74</td>
