--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">sunday 10/12/2023</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">30 - 32 - 18 - 69 - 25</p>
-                <p class="machine">46 - 84 - 10 - 19 - 27</p>        
-            </article>
-            <article>
-                <h3 class="game">Mark II</h3>
-                <p class="winning">12 - 71 - 78 - 50 - 54</p>
-                <p class="machine"> 6 - 72 - 14 - 34 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">32 - 40 - 58 - 43 - 23</p>
-                <p class="machine">82 - 49 - 33 -  3 - 54</p>        
-            </article>
-            <article>
-                <h3 class="game">Aseda</h3>
-                <p class="winning">81 - 33 -  6 - 44 - 26</p>
-                <p class="machine">53 - 45 - 89 - 14 - 67</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">26 - 58 - 77 - 32 - 55</p>
-                <p class="machine">78 - 63 - 38 -  4 - 48</p>        
-            </article>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">52 - 29 - 89 - 62 - 88</p>
-                <p class="machine">68 - 78 - 15 - 81 - 36</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">monday 11/12/2023</h2>
             <article>
                 <h3 class="game">Diamond</h3>
@@ -236,6 +202,40 @@
                 <h3 class="game">International</h3>
                 <p class="winning">50 - 35 - 49 - 38 - 27</p>
                 <p class="machine">60 - 37 - 86 - 20 - 19</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
+            <h2 class="date">Tuesday 12/12/2023</h2>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">84 - 21 - 37 - 33 - 65</p>
+                <p class="machine"> 8 - 75 - 44 - 18 - 43</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">76 - 42 - 15 - 54 - 12</p>
+                <p class="machine">60 - 71 - 81 - 68 - 39</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">27 - 72 - 74 - 31 -  4</p>
+                <p class="machine">60 - 77 - 20 - 89 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">42 - 70 - 20 - 88 - 11</p>
+                <p class="machine">81 - 18 - 48 - 27 - 57</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky G</h3>
+                <p class="winning">33 - 76 - 75 - 11 - 77</p>
+                <p class="machine">14 -  7 - 90 - 32 - 21</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">60 - 46 - 50 - 9 - 15</p>
+                <p class="machine">36 - 66 - 14 - 52 - 89</p>        
             </article>
         </section>
     </div>
@@ -427,7 +427,7 @@
                 </tr>
                 <tr class="color-2">
                     <td>Aseda</td>
-                    <td>7:25 pm</td>
+                    <td>6:25 pm</td>
                 </tr>
                 <tr class="color-1">
                     <td>Lucky</td>
