--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -172,40 +172,6 @@
     </header>
     <div class="gameResults">
         <section aria-label="two days ago result">
-            <h2 class="date">monday 11/12/2023</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">18 - 27 - 34 - 14 - 78</p>
-                <p class="machine">41 - 77 - 25 - 54 - 69</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">23 - 51 - 46 - 70 - 58</p>
-                <p class="machine">87 - 18 - 66 - 15 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning"> 3 - 40 - 33 - 13 - 81</p>
-                <p class="machine">23 - 42 - 15 - 25 - 17</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">26 - 65 - 57 -  6 - 36</p>
-                <p class="machine">86 - 50 - 38 - 68 - 73</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">23 - 76 - 10 - 77 - 86</p>
-                <p class="machine">27 - 20 -  4 - 68 -  7</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">50 - 35 - 49 - 38 - 27</p>
-                <p class="machine">60 - 37 - 86 - 20 - 19</p>        
-            </article>
-        </section>
-
-        <section aria-label="yesterday result">
             <h2 class="date">Tuesday 12/12/2023</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -236,6 +202,41 @@
                 <h3 class="game">Super</h3>
                 <p class="winning">60 - 46 - 50 - 9 - 15</p>
                 <p class="machine">36 - 66 - 14 - 52 - 89</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="yesterday result">
+            <h2 class="date">wednesday 13/12/2023</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">72 -  1 - 68 -  7 - 29</p>
+                <p class="machine">34 - 89 - 43 - 77 - 80</p>        
+            </article>
+            <article>
+                <h3 class="game">mark II</h3>
+                <p class="winning">23 - 86 - 75 - 61 - 28</p>
+                <p class="machine"> 1 - 18 - 65 -  6 - 13</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">80 -  6 - 75 - 10 - 30</p>
+                <p class="machine">67 - 64 - 90 - 1 - 58</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">75 - 31 - 49 - 77 -  8</p>
+                <p class="machine">78 - 84 -  1 - 40 -  5</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">56 - 26 - 77 - 38 - 14</p>
+                <p class="machine">19 - 48 - 36 -  5 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Lucky</h3>
+                <p class="winning">19 - 52 - 38 - 69 - 41</p>
+                <p class="machine">24 - 47 - 13 - 14 - 60</p>        
             </article>
         </section>
     </div>
