--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
             </div>
             <section>
                 <div class="iframe-container" id="iframeContainer">
-                    <div class="frame" id="frame"> 
-                        <iframe scrolling="no" src="./GAMES/1Royal.html"  ></iframe>
+                    <div class="frame" id="frame" tabindex="0"> 
+                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Royal.html"></iframe>
                     </div> 
-                    <div class="frame"> 
-                        <iframe scrolling="no" src="./GAMES/2Mark-II.html" ></iframe>
+                    <div class="frame" tabindex="0"> 
+                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2Mark-II.html"></iframe>
                     </div> 
-                    <div class="frame"> 
+                    <div class="frame" tabindex="0"> 
                         <iframe scrolling="no" src="./GAMES/3Enugu.html"></iframe>
                     </div>
-                    <div class="frame"> 
+                    <div class="frame" tabindex="0"> 
                         <iframe scrolling="no" src="./GAMES/4Lucky.html"></iframe>
                     </div>
                     <div class="frame">
